datanotes source link wrap fix (#2882)

--- a/src/components/datanotes/_datanotes.scss
+++ b/src/components/datanotes/_datanotes.scss
@@ -30,6 +30,7 @@
       //color: $vzb-color-accent-orange;
       color: $vzb-color-primary-dark;
       text-decoration: none;
+      white-space: normal;
     }
 
     a:hover {
